# 06C_EDA_15S02_GPU_KNN

./: .gitignore  CMakeLists.txt  README.md  output.txt
data/: knn_chebyshev.csv  knn_cosine.csv  knn_euclidean.csv  knn_manhattan.csv  queries.csv
include/: arkade_optix.h  baseline_faiss.h  baseline_fastrnn.h  baseline_flann.h  baseline_nmslib.h  utilidades.h
kernels/: arkade_kernels.cu
src/: gui_app.cpp  main.cpp
